--- a/EmployeeClient/managementEmployess/src/app/employee-table/employee-table.component.css
+++ b/EmployeeClient/managementEmployess/src/app/employee-table/employee-table.component.css
@@ -4,23 +4,20 @@
 .search-field {
     display: flex;
     align-items: center;
-    background-color: #f0f0f0; /* רקע אפור בהיר */
-    padding: 5px 10px; /* ריווח בתוך התיבה */
-    border-radius: 5px; /* פינות מעוגלות */
-    border: 1px solid #ccc; /* גבול */
+    background-color: #f0f0f0;
+    padding: 5px 10px; 
+    border-radius: 5px; 
+    border: 1px solid #ccc; 
   }
   
   .search-field input {
-    /* flex: 1; תיבת חיפוש תתמלא את רוחב הסליל */
-  /* border: none; לבטל את הגבול */
-  /* background-color: transparent; רקע בהיר כדי להתאים לרקע האפור */
-    width: 150px; /* רוחב השדה */
-    padding: 5px; /* ריווח בתוך השדה */
-    border-radius: 5px; /* פינות מעוגלות לשדה */
-    border: 1px solid #ccc; /* גבול לשדה */
+    width: 150px;
+    padding: 5px;
+    border-radius: 5px; 
+    border: 1px solid #ccc; 
   }
   .search-icon {
-    margin-left: 10px; /* ריווח משמאל לאייקון */
+    margin-left: 10px; 
   }
  
   
