--- a/EmployeeClient/managementEmployess/src/app/login/login.component.html
+++ b/EmployeeClient/managementEmployess/src/app/login/login.component.html
@@ -1,20 +1,3 @@
-<!-- <p>login works!</p>
-<div class="container">
-    <div *ngIf="showLogin">
-<div class="login-form" [formGroup]="LoginForm">
-    <div class="form-group">
-        <label for="userName">Name</label>
-        <input id="userName" class="form-control" placeholder="Name" type="text" formControlName="userName">
-    </div>
-    <div class="form-group">
-        <label for="Tz">Tz</label>
-        <input id="Tz" class="form-control" placeholder="Tz" type="number" formControlName="Tz">
-        <p *ngIf="showErrorMessege" class="error-message">Please enter the password again!</p>
-    </div>
-    <button class="btn btn-primary btn-block" type="submit" [disabled]="!this.LoginForm.valid"
-        (click)="login()">Login</button>
-</div></div>
-</div> -->
 <form [formGroup]="LoginForm" class="container mt-5">
     <div class="form-group">
         <label for="name">NAME:</label>  
@@ -25,5 +8,5 @@
         <label for="Tz">Tz</label>
         <input id="Tz" class="form-control"  type="number" formControlName="tz">
     </div>
-    <button (click)="getUsers()" class="btn-primary">Save</button>
+    <button (click)="getEmployee()" class="btn-primary">Save</button>
 </form>
