--- a/EmployeeClient/managementEmployess/src/app/edit-employe/edit-employe.component.html
+++ b/EmployeeClient/managementEmployess/src/app/edit-employe/edit-employe.component.html
@@ -17,9 +17,8 @@
         </div><br>
 
         <div class="form-group">
-            <label for="dateOfBirth">BirthDate(required, must be 16 or older): </label>
+            <label for="dateOfBirth">Birth-Date: </label>
             <input type="date" class="form-control" id="dateOfBirth" formControlName="dateOfBirth">
-            <div>{{ getErrorMessage('birthDate') }}</div>
         </div><br>
 
         <div class="form-group mb-3">
@@ -37,9 +36,16 @@
         </div>
 
         <div class="form-group">
-            <label for="beginningOfWork">Begining Of Work:</label>
+            <label for="beginningOfWork">Entry Date:</label>
             <input type="date" id="beginningOfWork" class="form-control" formControlName="beginningOfWork">
         </div><br>
+        <span (click)="addRoles()" class="material-symbols-outlined clickMe">
+            school
+        </span><br>
+    <div *ngFor="let i of range(1, countAdd)">
+        <app-add-role-to-employee  [fromEdit]="fromEdit" [employee]="employee" (dataEvent)="addItem($event)"></app-add-role-to-employee>
+    </div>
+    <app-add-role-to-employee (deleteRoleEvent)="deleteRole($event)"></app-add-role-to-employee>
         <button type="submit" class="btn btn-outline-success" [disabled]="!this.EditEmployeeForm.valid"
             (click)="updateEmployee()"><span class="material-symbols-outlined">
                 save
