--- a/EmployeeClient/managementEmployess/src/app/login/login.component.html
+++ b/EmployeeClient/managementEmployess/src/app/login/login.component.html
@@ -8,5 +8,5 @@
         <label for="Tz">Tz</label>
         <input id="Tz" class="form-control"  type="number" formControlName="tz">
     </div>
-    <button (click)="getEmployee()" class="btn-primary">Save</button>
+    <button (click)="getEmployee()" class="btn-primary">Login</button>
 </form>
