--- a/EmployeeClient/managementEmployess/src/app/login/login.component.html
+++ b/EmployeeClient/managementEmployess/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     </div>
     <br/>
     <div class="form-group">
-        <label for="Tz">Tz</label>
+        <label for="Tz">ID</label>
         <input id="Tz" class="form-control"  type="number" formControlName="tz">
     </div>
     <button (click)="getEmployee()" class="btn-primary">Login</button>
