--- a/EmployeeClient/managementEmployess/src/app/edit-employe/edit-employe.component.html
+++ b/EmployeeClient/managementEmployess/src/app/edit-employe/edit-employe.component.html
@@ -23,21 +23,21 @@
 
         <div class="form-group mb-3">
             <label class="form-label">Gender:</label>
-        <br>
+            <br>
             <label class="material-symbols-outlined clickMe" title="Man" (click)="selectGender(0)">
-                <input type="radio"  style="display: none">
+                <input type="radio" style="display: none">
                 Man
             </label>
-        
+
             <label class="material-symbols-outlined clickMe" title="Woman" (click)="selectGender(1)">
-                <input type="radio"  style="display: none">
+                <input type="radio" style="display: none">
                 Woman
             </label>
-        
+
             <input type="hidden" id="gender" formControlName="gender">
-        
+
         </div>
-     
+
 
         <div class="form-group">
             <label for="beginningOfWork">Entry Date:</label>
@@ -46,9 +46,10 @@
         <span (click)="addRoles()" title="Roles" class="material-symbols-outlined clickMe">
             school
         </span><br>
-    <div *ngFor="let i of range(1, countAdd)">
-        <app-add-role-to-employee (deleteRoleEvent)="deleteRole($event)" [fromEdit]="fromEdit" [employee]="employee" (dataEvent)="addItem($event)"></app-add-role-to-employee>
-    </div>
+        <div *ngFor="let i of range(1, countAdd)">
+            <app-add-role-to-employee (deleteRoleEvent)="deleteRole($event)" [fromEdit]="fromEdit" [employee]="employee"
+                (dataEvent)="addItem($event)"></app-add-role-to-employee>
+        </div>
         <button type="submit" class="btn btn-outline-success" [disabled]="!this.EditEmployeeForm.valid"
             (click)="updateEmployee()"><span class="material-symbols-outlined">
                 save
